Fixed alignment

--- a/Uber/src/app/modules/history/ratings/ratings.component.css
+++ b/Uber/src/app/modules/history/ratings/ratings.component.css
@@ -130,7 +130,6 @@ li {
     margin-top: 15px;
     background-color: #96D49C;
     color: white;
-    opacity: 0.8;
     border-radius: 5px;
     border: none;
     font-size: larger;
