--- a/Uber/src/app/modules/review/review-dialog/review-dialog.component.css
+++ b/Uber/src/app/modules/review/review-dialog/review-dialog.component.css
@@ -25,6 +25,8 @@ p {
 }
 
 .review-type {
+    height: 22px;
+    vertical-align: middle;
     margin-top: -20px;
     margin-right: 10px;
     font-size: large;
